2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp: Whitespace fixes.

2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-process-target): Remove old commented code.
	* lib/dg.exp (dg-test): Likewise.

2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp: Improve top-of-file documentation.

2016-03-05  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (remote_exec): Restore original timeout value.

2016-03-04  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (standard_upload): Remove dead code.

2016-02-24  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (prune): Restore this proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-02-23  Iain Buclaw  <ibuclaw@gdcproject.org>

	* lib/libgloss.exp (find_gdc): New proc.
	* lib/target.exp (default_target_compile): Add D support.
	* NEWS: Update.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Replace calls to verbose followed by
	send_log with a single call to verbose -log. Remove additional
	newlines from the log messages.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (getdirs): Ignore .git and .svn directories.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp: Improve comments.
	* NEWS: Update.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (prune): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (slay): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (absolute): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (psource): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/targetdb.exp (board_info): Simplify return logic.
