@@ -1,3 +1,12 @@
+2016-03-15  Ben Elliston  <bje@gnu.org>
+
+	Revert this change:
+	2016-02-14  Steve Ellcey  <sellcey@mips.com>
+
+	* baseboards/multi-sim.exp (dynamic_linker_flag): Check
+	GCC_UNDER_TEST.
+	* baseboards/multi-sim.exp (rpath_flags): Ditto.
+
 2016-03-13  Ben Elliston  <bje@gnu.org>
 
 	* lib/utils.exp: Whitespace fixes.
